Fix Java 8 incompatibility